@@ -1,27 +1,27 @@
 /*
  * Copyright (C) 2014-2015 Daniel Dietsch (dietsch@informatik.uni-freiburg.de)
  * Copyright (C) 2015 University of Freiburg
- * 
+ *
  * This file is part of the ULTIMATE Core.
- * 
+ *
  * The ULTIMATE Core is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Lesser General Public License as published
  * by the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
- * 
+ *
  * The ULTIMATE Core is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU Lesser General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU Lesser General Public License
  * along with the ULTIMATE Core. If not, see <http://www.gnu.org/licenses/>.
- * 
+ *
  * Additional permission under GNU GPL version 3 section 7:
  * If you modify the ULTIMATE Core, or any covered work, by linking
- * or combining it with Eclipse RCP (or a modified version of Eclipse RCP), 
- * containing parts covered by the terms of the Eclipse Public License, the 
- * licensors of the ULTIMATE Core grant you additional permission 
+ * or combining it with Eclipse RCP (or a modified version of Eclipse RCP),
+ * containing parts covered by the terms of the Eclipse Public License, the
+ * licensors of the ULTIMATE Core grant you additional permission
  * to convey the resulting work.
  */
 package de.uni_freiburg.informatik.ultimate.core.coreplugin;
@@ -29,13 +29,16 @@ package de.uni_freiburg.informatik.ultimate.core.coreplugin;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.IConfigurationElement;
 import org.eclipse.core.runtime.IExtensionRegistry;
 import org.eclipse.core.runtime.Platform;
 
-import de.uni_freiburg.informatik.ultimate.core.lib.toolchain.ToolchainListType;
+import de.uni_freiburg.informatik.ultimate.core.lib.toolchain.RunDefinition;
 import de.uni_freiburg.informatik.ultimate.core.model.IAnalysis;
 import de.uni_freiburg.informatik.ultimate.core.model.IController;
 import de.uni_freiburg.informatik.ultimate.core.model.IGenerator;
@@ -48,36 +51,35 @@ import de.uni_freiburg.informatik.ultimate.core.model.IUltimatePlugin;
 import de.uni_freiburg.informatik.ultimate.core.model.services.ILogger;
 import de.uni_freiburg.informatik.ultimate.core.model.services.IToolchainStorage;
 import de.uni_freiburg.informatik.ultimate.core.model.services.IUltimateServiceProvider;
-import de.uni_freiburg.informatik.ultimate.ep.ExtensionPoints;
+import de.uni_freiburg.informatik.ultimate.ep.UltimateExtensionPoints;
+import de.uni_freiburg.informatik.ultimate.util.datastructures.relation.Pair;
 
 /**
- * 
+ *
  * PluginFactory creates instances of plugins for toolchains and/or the core.
- * 
+ *
  * @author dietsch
- * 
+ *
  */
 final class PluginFactory implements IServiceFactoryFactory {
 
-	// private static final Class<?>[] sIToolClasses = { IAnalysis.class,
-	// IGenerator.class, IOutput.class };
-	private static final Class<?>[] sIToolchainPluginClasses = { IAnalysis.class, IGenerator.class, IOutput.class,
-			ISource.class };
+	private static final Class<?>[] ITOOLCHAIN_PLUGIN_CLASSES =
+			{ IAnalysis.class, IGenerator.class, IOutput.class, ISource.class };
 
 	private final IExtensionRegistry mRegistry;
 	private final ILogger mLogger;
 	private final SettingsManager mSettingsManager;
-	private final HashMap<Class<?>, List<IConfigurationElement>> mAvailableToolsByClass;
-	private final HashMap<String, IConfigurationElement> mAvailableToolsByClassName;
-	private final HashMap<String, String> mPluginIDToClassName;
-	private final HashMap<Class<?>, IServiceFactory<?>> mAvailableServicesByClassName;
+	private final Map<Class<?>, List<IConfigurationElement>> mAvailableToolsByClass;
+	private final Map<String, IConfigurationElement> mAvailableToolsByClassName;
+	private final Map<String, String> mPluginIDToClassName;
+	private final Map<Class<?>, IServiceFactory<?>> mAvailableServicesByClassName;
 
 	private boolean mGuiMode;
-	private final IController<ToolchainListType> mController;
+	private final IController<RunDefinition> mController;
 	private List<IToolchainPlugin> mToolchainPluginCache;
 	private List<ITool> mToolCache;
 
-	PluginFactory(SettingsManager settingsManager, ILogger logger) {
+	PluginFactory(final SettingsManager settingsManager, final ILogger logger) {
 		mLogger = logger;
 		mRegistry = Platform.getExtensionRegistry();
 		mAvailableToolsByClass = new HashMap<>();
@@ -101,17 +103,11 @@ final class PluginFactory implements IServiceFactoryFactory {
 		mLogger.info("--------------------------------------------------------------------------------");
 	}
 
-	// TODO: Do it somewhere else
-	// mLogger.debug("--------------------------------------------------------------------------------");
-	// mLogger.debug("Loaded default settings");
-	// checkPreferencesForActivePlugins();
-	// mLogger.debug("--------------------------------------------------------------------------------");
-
-	IController<ToolchainListType> getController() {
+	IController<RunDefinition> getController() {
 		return mController;
 	}
 
-	List<String> getPluginClassNames(Class<?> clazz) {
+	List<String> getPluginClassNames(final Class<?> clazz) {
 		final List<IConfigurationElement> elems = mAvailableToolsByClass.get(clazz);
 		final List<String> rtr = new ArrayList<>();
 		if (elems != null) {
@@ -123,9 +119,9 @@ final class PluginFactory implements IServiceFactoryFactory {
 	}
 
 	/**
-	 * 
+	 *
 	 * TODO: How to check feasibility / admissibility ?
-	 * 
+	 *
 	 * @return
 	 */
 	List<String> getPluginIds() {
@@ -133,11 +129,11 @@ final class PluginFactory implements IServiceFactoryFactory {
 	}
 
 	/**
-	 * 
+	 *
 	 * @param toolId
 	 * @return
 	 */
-	<T extends IToolchainPlugin> T createTool(String toolId) {
+	<T extends IToolchainPlugin> T createTool(final String toolId) {
 		IConfigurationElement element = mAvailableToolsByClassName.get(toolId);
 		if (element == null) {
 			// maybe the user used the PluginID?
@@ -147,7 +143,7 @@ final class PluginFactory implements IServiceFactoryFactory {
 		return prepareToolchainPlugin(plugin);
 	}
 
-	private <T extends IToolchainPlugin> T prepareToolchainPlugin(T plugin) {
+	private <T extends IToolchainPlugin> T prepareToolchainPlugin(final T plugin) {
 		if (plugin == null) {
 			return null;
 		}
@@ -165,7 +161,7 @@ final class PluginFactory implements IServiceFactoryFactory {
 
 	/**
 	 * This method returns a list of instances of available IToolchainPlugins. Those tools are not initialized.
-	 * 
+	 *
 	 * @return
 	 */
 	List<IToolchainPlugin> getAllAvailableToolchainPlugins() {
@@ -200,7 +196,7 @@ final class PluginFactory implements IServiceFactoryFactory {
 		mLogger.info("--------------------------------------------------------------------------------");
 		mLogger.info("Loading all admissible plugins (creating one instance, loading preferences)");
 		int notAdmissible = 0;
-		for (final Class<?> type : sIToolchainPluginClasses) {
+		for (final Class<?> type : ITOOLCHAIN_PLUGIN_CLASSES) {
 			final List<IConfigurationElement> elements = mAvailableToolsByClass.get(type);
 			if (elements == null) {
 				continue;
@@ -225,7 +221,7 @@ final class PluginFactory implements IServiceFactoryFactory {
 		return rtr;
 	}
 
-	boolean isPluginAvailable(String pluginId) {
+	boolean isPluginAvailable(final String pluginId) {
 		return mAvailableToolsByClassName.containsKey(pluginId) || mPluginIDToClassName.containsKey(pluginId);
 	}
 
@@ -233,34 +229,64 @@ final class PluginFactory implements IServiceFactoryFactory {
 	 * This method loads all contributions to the IController Extension Point. Its receiving configuration elements (see
 	 * exsd-files) which define class name in element "impl" and attribute "class" as well as an attribute
 	 * "isGraphical". It then
-	 * 
+	 *
 	 * Changed in Ultimate 2.0 to support multiple present controllers and to make the distinction between graphical and
 	 * non graphical ones
-	 * 
+	 *
 	 * @param reg
 	 *            The extension registry (which extensions are valid and how can I find them); is obtained by
 	 *            Platform.getExtensionRegistry()
 	 * @throws CoreException
 	 */
-	private IController<ToolchainListType> loadControllerPlugin(IExtensionRegistry reg) {
+	private IController<RunDefinition> loadControllerPlugin(final IExtensionRegistry reg) {
+		// first, determine who will be the controller
 		final List<IConfigurationElement> configElements = mAvailableToolsByClass.get(IController.class);
 
-		if (configElements.size() != 1) {
-			mLogger.fatal("Invalid configuration. You should have only 1 IController plugin, but you have "
-					+ configElements.size());
-
-			if (configElements.size() == 0) {
-				return null;
-			}
-
-			for (final IConfigurationElement elem : configElements) {
-				mLogger.fatal(elem.getAttribute("class"));
-			}
+		if (configElements.isEmpty()) {
+			mLogger.fatal(
+					"Invalid configuration. You should have at least one IController plugin, but there are none.");
 			return null;
 		}
-		final IConfigurationElement controllerDescriptor = configElements.get(0);
-		final IController<ToolchainListType> controller = createInstance(controllerDescriptor);
-		mGuiMode = new Boolean(controllerDescriptor.getAttribute("isGraphical")).booleanValue();
+
+		if (configElements.size() == 1) {
+			// just take the only one
+			return loadControllerPlugin(configElements.get(0));
+		}
+
+		// ok, there are multiple ones. We have to see if they can be discriminated by their preference value
+		final List<Pair<IConfigurationElement, Integer>> elemsWithPreference =
+				configElements.stream().map(elem -> new Pair<>(elem, Integer.valueOf(elem.getAttribute("preference"))))
+						.collect(Collectors.toList());
+
+		final Optional<Pair<IConfigurationElement, Integer>> preferredElemOptional =
+				elemsWithPreference.stream().min((a, b) -> a.getSecond().compareTo(b.getSecond()));
+		if (!preferredElemOptional.isPresent()) {
+			throw new AssertionError("Java8 is broken");
+		}
+		final Pair<IConfigurationElement, Integer> preferredElem = preferredElemOptional.get();
+		final int minValue = preferredElem.getSecond();
+
+		// check if the minimum is unambiguous
+		final List<Pair<IConfigurationElement, Integer>> preferredElements =
+				elemsWithPreference.stream().filter(a -> a.getSecond().equals(minValue)).collect(Collectors.toList());
+		final int preferredElementsSize = preferredElements.size();
+		if (preferredElementsSize == 1) {
+			// it is, we take the preferred element.
+			return loadControllerPlugin(preferredElem.getFirst());
+		}
+		// it is not, we have to give up
+
+		mLogger.fatal("Invalid configuration. You should have only one preferred IController plugin, but you have "
+				+ preferredElementsSize);
+		for (final Pair<IConfigurationElement, Integer> elem : preferredElements) {
+			mLogger.fatal(elem.getFirst().getAttribute("class") + " has preference value " + elem.getSecond());
+		}
+		return null;
+	}
+
+	private IController<RunDefinition> loadControllerPlugin(final IConfigurationElement controllerDescriptor) {
+		final IController<RunDefinition> controller = createInstance(controllerDescriptor);
+		mGuiMode = Boolean.valueOf(controllerDescriptor.getAttribute("isGraphical"));
 		mSettingsManager.registerPlugin(controller);
 
 		mLogger.info("Loaded " + (mGuiMode ? "graphical " : "") + "controller " + controller.getPluginName());
@@ -268,7 +294,7 @@ final class PluginFactory implements IServiceFactoryFactory {
 	}
 
 	@SuppressWarnings("unchecked")
-	private <T extends IUltimatePlugin> T createInstance(IConfigurationElement element) {
+	private <T extends IUltimatePlugin> T createInstance(final IConfigurationElement element) {
 		if (element == null) {
 			return null;
 		}
@@ -280,7 +306,7 @@ final class PluginFactory implements IServiceFactoryFactory {
 		}
 	}
 
-	private void registerType(Class<?> clazz) {
+	private void registerType(final Class<?> clazz) {
 		if (clazz.equals(IServiceFactory.class)) {
 			for (final IConfigurationElement element : mRegistry
 					.getConfigurationElementsFor(getExtensionPointFromClass(clazz))) {
@@ -300,10 +326,11 @@ final class PluginFactory implements IServiceFactoryFactory {
 		}
 	}
 
-	private void registerTool(Class<?> clazz) {
+	private void registerTool(final Class<?> clazz) {
 		final List<IConfigurationElement> result = new ArrayList<IConfigurationElement>();
 		mAvailableToolsByClass.put(clazz, result);
-		for (final IConfigurationElement element : mRegistry.getConfigurationElementsFor(getExtensionPointFromClass(clazz))) {
+		for (final IConfigurationElement element : mRegistry
+				.getConfigurationElementsFor(getExtensionPointFromClass(clazz))) {
 			result.add(element);
 			final String className = element.getAttribute("class");
 			mAvailableToolsByClassName.put(className, element);
@@ -312,34 +339,34 @@ final class PluginFactory implements IServiceFactoryFactory {
 		mLogger.info(result.size() + " " + clazz.getSimpleName() + " plugins available");
 	}
 
-	private String createPluginID(String classname) {
-		final String rtr = classname.substring(0, classname.lastIndexOf("."));
+	private String createPluginID(final String classname) {
+		final String rtr = classname.substring(0, classname.lastIndexOf('.'));
 		return rtr;
 	}
 
-	private String getExtensionPointFromClass(Class<?> clazz) {
+	private String getExtensionPointFromClass(final Class<?> clazz) {
 		final String qualifiedName = clazz.getName();
 		switch (qualifiedName) {
 		case "de.uni_freiburg.informatik.ultimate.core.model.IController":
-			return ExtensionPoints.EP_CONTROLLER;
+			return UltimateExtensionPoints.EP_CONTROLLER;
 		case "de.uni_freiburg.informatik.ultimate.core.model.ISource":
-			return ExtensionPoints.EP_SOURCE;
+			return UltimateExtensionPoints.EP_SOURCE;
 		case "de.uni_freiburg.informatik.ultimate.core.model.IOutput":
-			return ExtensionPoints.EP_OUTPUT;
+			return UltimateExtensionPoints.EP_OUTPUT;
 		case "de.uni_freiburg.informatik.ultimate.core.model.IGenerator":
-			return ExtensionPoints.EP_GENERATOR;
+			return UltimateExtensionPoints.EP_GENERATOR;
 		case "de.uni_freiburg.informatik.ultimate.core.model.IAnalysis":
-			return ExtensionPoints.EP_ANALYSIS;
+			return UltimateExtensionPoints.EP_ANALYSIS;
 		case "de.uni_freiburg.informatik.ultimate.core.model.IServiceFactory":
-			return ExtensionPoints.EP_SERVICE;
+			return UltimateExtensionPoints.EP_SERVICE;
 		default:
 			throw new IllegalArgumentException();
 		}
 	}
 
 	@Override
-	public <T, K extends IServiceFactory<T>> T createService(Class<K> service, IUltimateServiceProvider services,
-			IToolchainStorage storage) {
+	public <T, K extends IServiceFactory<T>> T createService(final Class<K> service,
+			final IUltimateServiceProvider services, final IToolchainStorage storage) {
 		final IServiceFactory<?> unknownfactory = mAvailableServicesByClassName.get(service);
 
 		if (unknownfactory == null) {
