@@ -19,9 +19,9 @@
  * 
  * Additional permission under GNU GPL version 3 section 7:
  * If you modify the ULTIMATE TraceAbstraction plug-in, or any covered work, by linking
- * or combining it with Eclipse RCP (or a modified version of Eclipse RCP), 
- * containing parts covered by the terms of the Eclipse Public License, the 
- * licensors of the ULTIMATE TraceAbstraction plug-in grant you additional permission 
+ * or combining it with Eclipse RCP (or a modified version of Eclipse RCP),
+ * containing parts covered by the terms of the Eclipse Public License, the
+ * licensors of the ULTIMATE TraceAbstraction plug-in grant you additional permission
  * to convey the resulting work.
  */
 package de.uni_freiburg.informatik.ultimate.plugins.generator.traceabstraction.predicates;
@@ -36,21 +36,24 @@ import java.util.Map;
 import java.util.Set;
 import java.util.SortedMap;
 
-import de.uni_freiburg.informatik.ultimate.automata.nwalibrary.NestedWord;
+import de.uni_freiburg.informatik.ultimate.automata.nestedword.NestedWord;
 import de.uni_freiburg.informatik.ultimate.core.model.services.ILogger;
 import de.uni_freiburg.informatik.ultimate.core.model.services.IUltimateServiceProvider;
-import de.uni_freiburg.informatik.ultimate.logic.Script;
 import de.uni_freiburg.informatik.ultimate.logic.Term;
-import de.uni_freiburg.informatik.ultimate.modelcheckerutils.boogie.ModifiableGlobalVariableManager;
+import de.uni_freiburg.informatik.ultimate.modelcheckerutils.cfg.ICfgSymbolTable;
+import de.uni_freiburg.informatik.ultimate.modelcheckerutils.cfg.ModifiableGlobalVariableManager;
 import de.uni_freiburg.informatik.ultimate.modelcheckerutils.cfg.structure.IAction;
-import de.uni_freiburg.informatik.ultimate.modelcheckerutils.cfg.transitions.TransFormula;
+import de.uni_freiburg.informatik.ultimate.modelcheckerutils.cfg.structure.ICallAction;
+import de.uni_freiburg.informatik.ultimate.modelcheckerutils.cfg.transitions.TransFormulaUtils;
+import de.uni_freiburg.informatik.ultimate.modelcheckerutils.cfg.transitions.UnmodifiableTransFormula;
 import de.uni_freiburg.informatik.ultimate.modelcheckerutils.cfg.variables.IProgramVar;
 import de.uni_freiburg.informatik.ultimate.modelcheckerutils.smt.PartialQuantifierElimination;
-import de.uni_freiburg.informatik.ultimate.modelcheckerutils.smt.SmtUtils.SimplicationTechnique;
+import de.uni_freiburg.informatik.ultimate.modelcheckerutils.smt.SmtUtils.SimplificationTechnique;
 import de.uni_freiburg.informatik.ultimate.modelcheckerutils.smt.SmtUtils.XnfConversionTechnique;
 import de.uni_freiburg.informatik.ultimate.modelcheckerutils.smt.linearTerms.QuantifierPusher;
 import de.uni_freiburg.informatik.ultimate.modelcheckerutils.smt.managedscript.ManagedScript;
 import de.uni_freiburg.informatik.ultimate.modelcheckerutils.smt.predicates.IPredicate;
+import de.uni_freiburg.informatik.ultimate.modelcheckerutils.smt.predicates.PredicateTransformer;
 import de.uni_freiburg.informatik.ultimate.plugins.generator.rcfgbuilder.cfg.Call;
 import de.uni_freiburg.informatik.ultimate.plugins.generator.rcfgbuilder.cfg.Return;
 import de.uni_freiburg.informatik.ultimate.plugins.generator.traceabstraction.Activator;
@@ -67,7 +70,7 @@ public class IterativePredicateTransformer {
 	private final ModifiableGlobalVariableManager mModifiedGlobals;
 	private final IUltimateServiceProvider mServices;
 	private final ILogger mLogger;
-	private final SimplicationTechnique mSimplificationTechnique;
+	private final SimplificationTechnique mSimplificationTechnique;
 	private final XnfConversionTechnique mXnfConversionTechnique;
 	private final ManagedScript mMgdScript;
 	
@@ -78,32 +81,35 @@ public class IterativePredicateTransformer {
 	private final IPredicate mPostcondition;
 	protected final SortedMap<Integer, IPredicate> mPendingContexts;
 	private final IPredicate mFalsePredicate;
+	private final boolean mInterproceduralPost = true;
+	private final ICfgSymbolTable mSymbolTable;
 	
 	private static final boolean s_TransformSummaryToCNF = true;
 
 	public IterativePredicateTransformer(final PredicateFactory predicateFactory,
-			final Script script,
-			final ManagedScript boogie2smt,
+			final ManagedScript mgdScript,
 			final ModifiableGlobalVariableManager modifiableGlobalVariableManager,
-			final IUltimateServiceProvider services, final NestedWord<? extends IAction> trace, 
-			final IPredicate precondition, final IPredicate postcondition, 
-			final SortedMap<Integer, IPredicate> pendingContexts,
-			final IPredicate falsePredicate, 
-			final SimplicationTechnique simplificationTechnique, final XnfConversionTechnique xnfConversionTechnique) {
+			final IUltimateServiceProvider services,
+			final NestedWord<? extends IAction> trace, final IPredicate precondition,
+			final IPredicate postcondition, final SortedMap<Integer, IPredicate> pendingContexts,
+			final IPredicate falsePredicate,
+			final SimplificationTechnique simplificationTechnique,
+			final XnfConversionTechnique xnfConversionTechnique, final ICfgSymbolTable symbolTable) {
 		mServices = services;
 		mLogger = mServices.getLoggingService().getLogger(Activator.PLUGIN_ID);
 		mSimplificationTechnique = simplificationTechnique;
 		mXnfConversionTechnique = xnfConversionTechnique;
-		mMgdScript = boogie2smt;
+		mMgdScript = mgdScript;
 		mModifiedGlobals = modifiableGlobalVariableManager;
-		mPredicateTransformer = new PredicateTransformer(boogie2smt, 
-				script, modifiableGlobalVariableManager, services, simplificationTechnique, xnfConversionTechnique);
+		mPredicateTransformer = new PredicateTransformer(services,
+				mgdScript, simplificationTechnique, xnfConversionTechnique);
 		mPredicateFactory = predicateFactory;
 		mTrace = trace;
 		mPrecondition = precondition;
 		mPostcondition = postcondition;
 		mPendingContexts = pendingContexts;
 		mFalsePredicate = falsePredicate;
+		mSymbolTable = symbolTable;
 	}
 	
 
@@ -111,7 +117,7 @@ public class IterativePredicateTransformer {
 	public interface PredicatePostprocessor {
 		/**
 		 * Do post processing for the predicate before the i'th action of
-		 * the trace. This means especially, that if i==0 we do the post 
+		 * the trace. This means especially, that if i==0 we do the post
 		 * processing for the precondition and if i==trace.length() we do
 		 * the post processing for the postcondition.
 		 */
@@ -122,29 +128,29 @@ public class IterativePredicateTransformer {
 	
 	/**
 	 * Compute sequence of strongest postcondition along a trace.
-	 * Start with the given precondition and compute iteratively 
+	 * Start with the given precondition and compute iteratively
 	 * {@link IPredicate}s using the SP predicate transformer.
-	 * @param nf representation of the trace along which we compute the SP 
+	 * @param nf representation of the trace along which we compute the SP
 	 * 	sequence
 	 * @param postprocs List of postprocessors that apply to each IPredicate
 	 * after it was constructed via SP. May be empty.
 	 * 	TODO: If the given postcondition is null, we also compute a precondition
-	 * (IPredicate before the first {@link IAction} in the trace) 
+	 * (IPredicate before the first {@link IAction} in the trace)
 	 */
 	public InterpolantsPreconditionPostcondition computeStrongestPostconditionSequence(
-			final NestedFormulas<TransFormula, IPredicate> nf, final List<PredicatePostprocessor> postprocs) {
+			final NestedFormulas<UnmodifiableTransFormula, IPredicate> nf, final List<PredicatePostprocessor> postprocs) {
 		final IPredicate[] spSequence = new IPredicate[mTrace.length() - 1];
 		final InterpolantsPreconditionPostcondition ipp = new InterpolantsPreconditionPostcondition(
 				mPrecondition, mPostcondition, Arrays.asList(spSequence));
 
 		for (int i = 0; i < mTrace.length() - 1; i++) {
-			final IPredicate predecessor = ipp.getInterpolant(i); 
+			final IPredicate predecessor = ipp.getInterpolant(i);
 			final Term spTerm;
 			if (mTrace.getSymbol(i) instanceof Call) {
-				final Call call = (Call) mTrace.getSymbol(i); 
+				final Call call = (Call) mTrace.getSymbol(i);
 				final String calledMethod = call.getCallStatement().getMethodName();
 				final Set<IProgramVar> modifiedGlobals = mModifiedGlobals.getModifiedBoogieVars(calledMethod);
-				if (mTrace.isPendingCall(i)) {
+				if (mTrace.isPendingCall(i) || !mInterproceduralPost ) {
 					spTerm = mPredicateTransformer.strongestPostconditionCall(
 							predecessor, nf.getLocalVarAssignment(i),
 							nf.getGlobalVarAssignment(i), nf.getOldVarAssignment(i),
@@ -157,9 +163,9 @@ public class IterativePredicateTransformer {
 				}
 			} else if (mTrace.getSymbol(i) instanceof Return) {
 				final IPredicate callerPred;
-				final TransFormula callGlobalVarsAssignment;
-				final TransFormula callOldVarsAssignment;
-				final TransFormula callLocalVarsAssignment;
+				final UnmodifiableTransFormula callGlobalVarsAssignment;
+				final UnmodifiableTransFormula callOldVarsAssignment;
+				final UnmodifiableTransFormula callLocalVarsAssignment;
 				if (mTrace.isPendingReturn(i)) {
 					callerPred = mPendingContexts.get(i);
 					callOldVarsAssignment = nf.getOldVarAssignment(i);
@@ -173,10 +179,10 @@ public class IterativePredicateTransformer {
 					callOldVarsAssignment = null;
 					callLocalVarsAssignment = nf.getLocalVarAssignment(callPos);
 				}
-				final TransFormula returnTransFormula = nf.getFormulaFromNonCallPos(i);
+				final UnmodifiableTransFormula returnTransFormula = nf.getFormulaFromNonCallPos(i);
 				spTerm = mPredicateTransformer.strongestPostcondition(
 						predecessor, callerPred,
-						returnTransFormula, callLocalVarsAssignment, 
+						returnTransFormula, callLocalVarsAssignment,
 						callGlobalVarsAssignment, callOldVarsAssignment);
 			} else {
 				spTerm = mPredicateTransformer.strongestPostcondition(
@@ -202,19 +208,19 @@ public class IterativePredicateTransformer {
 	
 	public static class QuantifierEliminationPostprocessor implements PredicatePostprocessor {
 		
-		private final IUltimateServiceProvider mServices; 
-		private final ILogger mLogger; 
+		private final IUltimateServiceProvider mServices;
+		private final ILogger mLogger;
 		private final ManagedScript mMgdScript;
 		private final PredicateFactory mPredicateFactory;
-		private final SimplicationTechnique mSimplificationTechnique;
+		private final SimplificationTechnique mSimplificationTechnique;
 		private final XnfConversionTechnique mXnfConversionTechnique;
 		
 
 		public QuantifierEliminationPostprocessor(
-				final IUltimateServiceProvider services, 
-				final ILogger logger, final ManagedScript boogie2smt, 
-				final PredicateFactory predicateFactory, 
-				final SimplicationTechnique simplificationTechnique, final XnfConversionTechnique xnfConversionTechnique) {
+				final IUltimateServiceProvider services,
+				final ILogger logger, final ManagedScript boogie2smt,
+				final PredicateFactory predicateFactory,
+				final SimplificationTechnique simplificationTechnique, final XnfConversionTechnique xnfConversionTechnique) {
 			super();
 			mServices = services;
 			mLogger = logger;
@@ -227,21 +233,21 @@ public class IterativePredicateTransformer {
 		@Override
 		public IPredicate postprocess(final IPredicate pred, final int i) {
 			final Term lessQuantifier = PartialQuantifierElimination.tryToEliminate(
-					mServices, mLogger, mMgdScript, 
+					mServices, mLogger, mMgdScript,
 					pred.getFormula(), mSimplificationTechnique, mXnfConversionTechnique);
 			final Term resultTerm;
 			{
-				// 2016-05-14 Matthias: Which structure of the resulting 
+				// 2016-05-14 Matthias: Which structure of the resulting
 				// formula is better? 1. Prenex normal form (quantifiers outside)
 				// or 2. a form where quantifiers are pushed inside.
 				// Option 2. allows us to simplify the formula with SimplifyDDA
 				// (which considers quantified formulas as atoms).
 				// However, SimplifyDDA may waste a lot of time.
-				// A small evaluation that I did today (using Z3) shows that 
-				// there is not much difference between both variants. 
-				resultTerm = new QuantifierPusher(mMgdScript, 
+				// A small evaluation that I did today (using Z3) shows that
+				// there is not much difference between both variants.
+				resultTerm = new QuantifierPusher(mMgdScript,
 						mServices).transform(lessQuantifier);
-//				resultTerm = new PrenexNormalForm(mBoogie2SMT.getScript(), 
+//				resultTerm = new PrenexNormalForm(mBoogie2SMT.getScript(),
 //									mBoogie2SMT.getVariableManager()).transform(lessQuantifier);
 			}
 			final IPredicate result = mPredicateFactory.newPredicate(resultTerm);
@@ -252,17 +258,17 @@ public class IterativePredicateTransformer {
 	
 	/**
 	 * Compute sequence of weakest precondition along a trace.
-	 * Start with the given postcondition and compute iteratively 
+	 * Start with the given postcondition and compute iteratively
 	 * {@link IPredicate}s using the WP predicate transformer.
 	 * If the given precondition is null, we also compute a precondition
-	 * (IPredicate before the first {@link IAction} in the trace) 
-	 * @param nf representation of the trace along which we compute the WP 
+	 * (IPredicate before the first {@link IAction} in the trace)
+	 * @param nf representation of the trace along which we compute the WP
 	 * 	sequence
 	 * @param postprocs List of postprocessors that apply to each IPredicate
 	 * after it was constructed via WP. May be empty.
 	 */
 	public InterpolantsPreconditionPostcondition computeWeakestPreconditionSequence(
-			final NestedFormulas<TransFormula, IPredicate> nf, final List<PredicatePostprocessor> postprocs,
+			final NestedFormulas<UnmodifiableTransFormula, IPredicate> nf, final List<PredicatePostprocessor> postprocs,
 			final boolean callPredecessorIsAlwaysFalse) {
 		final IPredicate[] wpSequence = new IPredicate[mTrace.length()-1];
 		final InterpolantsPreconditionPostcondition ipp = new InterpolantsPreconditionPostcondition(
@@ -284,7 +290,7 @@ public class IterativePredicateTransformer {
 			final IPredicate successor = ipp.getInterpolant(i+1);
 			if (mTrace.getSymbol(i) instanceof Call) {
 				if (mTrace.isPendingCall(i)) {
-					final Call call = (Call) mTrace.getSymbol(i); 
+					final Call call = (Call) mTrace.getSymbol(i);
 					final String calledMethod = call.getCallStatement().getMethodName();
 					final Set<IProgramVar> modifiedGlobals = mModifiedGlobals.getModifiedBoogieVars(calledMethod);
 					wpTerm = mPredicateTransformer.weakestPrecondition(
@@ -299,10 +305,10 @@ public class IterativePredicateTransformer {
 				}
 			} else if (mTrace.getSymbol(i) instanceof Return) {
 				final IPredicate callerPred;
-				final TransFormula globalVarsAssignments;
-				final TransFormula oldVarAssignments;
-				final TransFormula callLocalVarsAssignment;
-				final TransFormula returnTf = nf.getFormulaFromNonCallPos(i);
+				final UnmodifiableTransFormula globalVarsAssignments;
+				final UnmodifiableTransFormula oldVarAssignments;
+				final UnmodifiableTransFormula callLocalVarsAssignment;
+				final UnmodifiableTransFormula returnTf = nf.getFormulaFromNonCallPos(i);
 				final Return returnCB = (Return) mTrace.getSymbol(i);
 				final String calledMethod = returnCB.getCallStatement().getMethodName();
 				final Set<IProgramVar> modifiableGlobals = mModifiedGlobals.getModifiedBoogieVars(calledMethod);
@@ -312,7 +318,7 @@ public class IterativePredicateTransformer {
 					if (callPredecessorIsAlwaysFalse) {
 						callerPred = mFalsePredicate;
 					} else {
-						callerPred = mPendingContexts.get(new Integer(i));
+						callerPred = mPendingContexts.get(Integer.valueOf(i));
 					}
 					// we may get the local variable assignment (pending
 					// context)
@@ -330,7 +336,7 @@ public class IterativePredicateTransformer {
 					globalVarsAssignments = nf.getGlobalVarAssignment(callPos);
 					oldVarAssignments = nf.getOldVarAssignment(callPos);
 					final ProcedureSummary summary = computeProcedureSummary(
-							mTrace, callLocalVarsAssignment, returnTf, 
+							mTrace, callLocalVarsAssignment, returnTf,
 							oldVarAssignments, globalVarsAssignments, nf, callPos, i);
 					varsOccurringBetweenCallAndReturn = summary.computeVariableInInnerSummary();
 					final IPredicate wpOfSummary;
@@ -338,7 +344,7 @@ public class IterativePredicateTransformer {
 						final Term wpOfSummary_Term = mPredicateTransformer.weakestPrecondition(
 							successor, summary.getWithCallAndReturn());
 						final IPredicate wpOfSummary_Predicate = constructPredicate(wpOfSummary_Term);
-						wpOfSummary =  
+						wpOfSummary =
 							applyPostprocessors(postprocs, callPos, wpOfSummary_Predicate);
 					}
 					callerPredicatesComputed.put(callPos, wpOfSummary);
@@ -358,12 +364,12 @@ public class IterativePredicateTransformer {
 			}
 			final IPredicate postprocessed;
 			if ((mTrace.getSymbol(i) instanceof Call) && !mTrace.isPendingCall(i)) {
-				// predicate was already constructed while processing the 
+				// predicate was already constructed while processing the
 				// corresponding return
 				postprocessed = callerPredicatesComputed.get(i);
 			} else {
 				final IPredicate wp = constructPredicate(wpTerm);
-				postprocessed = applyPostprocessors(postprocs, i, wp); 
+				postprocessed = applyPostprocessors(postprocs, i, wp);
 			}
 			if (i == 0) {
 				computedPrecondition = postprocessed;
@@ -391,20 +397,20 @@ public class IterativePredicateTransformer {
 	
 	
 	private class ProcedureSummary {
-		private final TransFormula mWithCallAndReturn;
-		private final TransFormula mWithoutCallAndReturn;
+		private final UnmodifiableTransFormula mWithCallAndReturn;
+		private final UnmodifiableTransFormula mWithoutCallAndReturn;
 
-		public ProcedureSummary(final TransFormula withCallAndReturn, final TransFormula withoutCallAndReturn) {
+		public ProcedureSummary(final UnmodifiableTransFormula withCallAndReturn, final UnmodifiableTransFormula withoutCallAndReturn) {
 			super();
 			mWithCallAndReturn = withCallAndReturn;
 			mWithoutCallAndReturn = withoutCallAndReturn;
 		}
 
-		public TransFormula getWithCallAndReturn() {
+		public UnmodifiableTransFormula getWithCallAndReturn() {
 			return mWithCallAndReturn;
 		}
 
-		public TransFormula getWithoutCallAndReturn() {
+		public UnmodifiableTransFormula getWithoutCallAndReturn() {
 			return mWithoutCallAndReturn;
 		}
 
@@ -500,16 +506,18 @@ public class IterativePredicateTransformer {
 	 * @param call_pos
 	 * @return
 	 */
-	private ProcedureSummary computeProcedureSummary(final NestedWord<? extends IAction> trace, final TransFormula Call,
-			final TransFormula Return, final TransFormula oldVarsAssignment, final TransFormula globalVarsAssignment, 
-			final NestedFormulas<TransFormula, IPredicate> rv,
+	private ProcedureSummary computeProcedureSummary(final NestedWord<? extends IAction> trace, final UnmodifiableTransFormula Call,
+			final UnmodifiableTransFormula Return, final UnmodifiableTransFormula oldVarsAssignment, final UnmodifiableTransFormula globalVarsAssignment,
+			final NestedFormulas<UnmodifiableTransFormula, IPredicate> rv,
 			final int call_pos, final int return_pos) {
-		final TransFormula summaryOfInnerStatements = computeSummaryForInterproceduralTrace(
+		final UnmodifiableTransFormula summaryOfInnerStatements = computeSummaryForInterproceduralTrace(
 				trace, rv, call_pos + 1, return_pos);
-		final TransFormula summaryWithCallAndReturn = TransFormula.sequentialCompositionWithCallAndReturn(
-				mMgdScript, true, false, s_TransformSummaryToCNF, Call, 
+		final String callee = ((ICallAction) trace.getSymbol(call_pos)).getSucceedingProcedure();
+		final UnmodifiableTransFormula summaryWithCallAndReturn = TransFormulaUtils.sequentialCompositionWithCallAndReturn(
+				mMgdScript, true, false, s_TransformSummaryToCNF, Call,
 				oldVarsAssignment, globalVarsAssignment,
-				summaryOfInnerStatements, Return, mLogger, mServices, mXnfConversionTechnique, mSimplificationTechnique);
+				summaryOfInnerStatements, Return, mLogger, mServices, mXnfConversionTechnique, mSimplificationTechnique,
+				mSymbolTable, mModifiedGlobals.getModifiedBoogieVars(callee));
 		return new ProcedureSummary(summaryWithCallAndReturn, summaryOfInnerStatements);
 	}
 
@@ -520,14 +528,14 @@ public class IterativePredicateTransformer {
 	 * @return - a summary for the statements from the given trace from position
 	 *         "start" to position "end"
 	 */
-	private TransFormula computeSummaryForInterproceduralTrace(final NestedWord<? extends IAction> trace,
-			final NestedFormulas<TransFormula, IPredicate> rv, final int start, final int end) {
-		final LinkedList<TransFormula> transformulasToComputeSummaryFor = new LinkedList<TransFormula>();
+	private UnmodifiableTransFormula computeSummaryForInterproceduralTrace(final NestedWord<? extends IAction> trace,
+			final NestedFormulas<UnmodifiableTransFormula, IPredicate> rv, final int start, final int end) {
+		final LinkedList<UnmodifiableTransFormula> transformulasToComputeSummaryFor = new LinkedList<UnmodifiableTransFormula>();
 		for (int i = start; i < end; i++) {
-			if (trace.getSymbol(i) instanceof Call) {
-				final TransFormula callTf = rv.getLocalVarAssignment(i);
-				final TransFormula oldVarsAssignment = rv.getOldVarAssignment(i);
-				final TransFormula globalVarsAssignment = rv.getGlobalVarAssignment(i);
+			if (trace.getSymbol(i) instanceof ICallAction) {
+				final UnmodifiableTransFormula callTf = rv.getLocalVarAssignment(i);
+				final UnmodifiableTransFormula oldVarsAssignment = rv.getOldVarAssignment(i);
+				final UnmodifiableTransFormula globalVarsAssignment = rv.getGlobalVarAssignment(i);
 				if (!trace.isPendingCall(i)) {
 					// Case: non-pending call
 					// Compute a summary for Call and corresponding Return, but
@@ -538,34 +546,42 @@ public class IterativePredicateTransformer {
 						// 1. Compute a summary for the statements between this
 						// non-pending Call
 						// and the corresponding Return recursively
-						final TransFormula summaryBetweenCallAndReturn = computeSummaryForInterproceduralTrace(trace, rv,
+						final UnmodifiableTransFormula summaryBetweenCallAndReturn = computeSummaryForInterproceduralTrace(trace, rv,
 								i + 1, returnPosition);
-						final TransFormula returnTf = rv.getFormulaFromNonCallPos(returnPosition);
-						transformulasToComputeSummaryFor.addLast(TransFormula.sequentialCompositionWithCallAndReturn(
+						final UnmodifiableTransFormula returnTf = rv.getFormulaFromNonCallPos(returnPosition);
+						final String callee = ((ICallAction) trace.getSymbol(i)).getSucceedingProcedure();
+						transformulasToComputeSummaryFor.addLast(TransFormulaUtils.sequentialCompositionWithCallAndReturn(
 								mMgdScript, true, false, s_TransformSummaryToCNF, callTf, oldVarsAssignment,
 								globalVarsAssignment, summaryBetweenCallAndReturn, returnTf,
-								mLogger, mServices, mXnfConversionTechnique, mSimplificationTechnique));
+								mLogger, mServices, mXnfConversionTechnique, mSimplificationTechnique,
+								mSymbolTable, mModifiedGlobals.getModifiedBoogieVars(callee)));
 						i = returnPosition;
 					} else {
 						// If the position of the corresponding Return is >=
 						// "end",
 						// then we handle this case as a pending-call
-						final TransFormula summaryAfterPendingCall = computeSummaryForInterproceduralTrace(trace, rv, i + 1, end);
+						final UnmodifiableTransFormula summaryAfterPendingCall = computeSummaryForInterproceduralTrace(trace, rv, i + 1, end);
 						final String nameEndProcedure = trace.getSymbol(end).getSucceedingProcedure();
 						final Set<IProgramVar> modifiableGlobalsOfEndProcedure = mModifiedGlobals.getModifiedBoogieVars(nameEndProcedure);
-						return TransFormula.sequentialCompositionWithPendingCall(mMgdScript, true,
+						return TransFormulaUtils.sequentialCompositionWithPendingCall(mMgdScript, true,
 								false, s_TransformSummaryToCNF, transformulasToComputeSummaryFor,
-								callTf, oldVarsAssignment, summaryAfterPendingCall,
-								mLogger, mServices, modifiableGlobalsOfEndProcedure, mXnfConversionTechnique, mSimplificationTechnique);
+								callTf, oldVarsAssignment, globalVarsAssignment,
+								summaryAfterPendingCall, mLogger, mServices, modifiableGlobalsOfEndProcedure,
+								mXnfConversionTechnique, mSimplificationTechnique, mSymbolTable,
+								trace.getSymbol(start).getPrecedingProcedure(), trace.getSymbol(i).getPrecedingProcedure(),
+								trace.getSymbol(i).getSucceedingProcedure(), nameEndProcedure, mModifiedGlobals);
 					}
 				} else {
-					final TransFormula summaryAfterPendingCall = computeSummaryForInterproceduralTrace(trace, rv, i + 1, end);
+					final UnmodifiableTransFormula summaryAfterPendingCall = computeSummaryForInterproceduralTrace(trace, rv, i + 1, end);
 					final String nameEndProcedure = trace.getSymbol(end).getSucceedingProcedure();
 					final Set<IProgramVar> modifiableGlobalsOfEndProcedure = mModifiedGlobals.getModifiedBoogieVars(nameEndProcedure);
-					return TransFormula.sequentialCompositionWithPendingCall(mMgdScript, true, false,
+					return TransFormulaUtils.sequentialCompositionWithPendingCall(mMgdScript, true, false,
 							s_TransformSummaryToCNF, transformulasToComputeSummaryFor,
-							callTf, oldVarsAssignment, summaryAfterPendingCall, mLogger,
-							mServices, modifiableGlobalsOfEndProcedure, mXnfConversionTechnique, mSimplificationTechnique);
+							callTf, oldVarsAssignment, null, summaryAfterPendingCall,
+							mLogger, mServices, modifiableGlobalsOfEndProcedure, mXnfConversionTechnique,
+							mSimplificationTechnique, mSymbolTable,
+							trace.getSymbol(start).getPrecedingProcedure(), trace.getSymbol(i).getPrecedingProcedure(),
+							trace.getSymbol(i).getSucceedingProcedure(), nameEndProcedure, mModifiedGlobals);
 				}
 			} else if (trace.getSymbol(i) instanceof Return) {
 				// Nothing to do
@@ -573,8 +589,8 @@ public class IterativePredicateTransformer {
 				transformulasToComputeSummaryFor.addLast(rv.getFormulaFromNonCallPos(i));
 			}
 		}
-		return TransFormula.sequentialComposition(mLogger, mServices, mMgdScript, true, false,
-				s_TransformSummaryToCNF, mXnfConversionTechnique, mSimplificationTechnique, transformulasToComputeSummaryFor.toArray(new TransFormula[transformulasToComputeSummaryFor.size()]));
+		return TransFormulaUtils.sequentialComposition(mLogger, mServices, mMgdScript, true, false,
+				s_TransformSummaryToCNF, mXnfConversionTechnique, mSimplificationTechnique, transformulasToComputeSummaryFor);
 
 	}
 
